--- a/src/app/client/components/parents/add-parent/add-parent.component.html
+++ b/src/app/client/components/parents/add-parent/add-parent.component.html
@@ -12,7 +12,14 @@
     <label for="email" class="form-label">Email</label>
     <input type="email" class="form-control" id="email" formControlName="email">
   </div>
+
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Add</button>
+  </div>
+
+  <div class="explanation-content">
+    <h3>Explanation</h3>
+    <p>Username will be: Firstname.Lastname</p>
+    <p>Password will be: Firstname123!</p>
   </div>
 </form>
