--- a/src/app/management/components/main/main.component.scss
+++ b/src/app/management/components/main/main.component.scss
@@ -18,9 +18,7 @@ mat-sidenav {
   height: calc(100vh - 98px);
   border-radius: 10px;
   margin: 16px 16px 16px 32px;
-
-  display: flex;
-  justify-content: center;
+  background: #F6F7FB;
   padding: 20px;
 }
 
