--- a/src/app/management/components/system-admin-users/add-system-admin-users/add-system-admin-users.component.html
+++ b/src/app/management/components/system-admin-users/add-system-admin-users/add-system-admin-users.component.html
@@ -17,6 +17,11 @@
 
   <div class="col-12">
     <button type="submit" class="btn btn-primary">Add</button>
+
+
+  </div>
+  <div class="explanation-content">
+    <h3>Explanation</h3>
     <p>Username will be: Firstname.Lastname</p>
     <p>Password will be: Firstname123!</p>
   </div>
