--- a/src/app/client/components/classes/class-students/class-students.component.html
+++ b/src/app/client/components/classes/class-students/class-students.component.html
@@ -3,38 +3,38 @@
 
 
     <ng-container matColumnDef="nr_amzes">
-      <th mat-header-cell *matHeaderCellDef> nr_amzes </th>
-      <td mat-cell *matCellDef="let element"> {{element.nr_amzes}} </td>
+      <th mat-header-cell *matHeaderCellDef> Nr Amzes </th>
+      <td mat-cell *matCellDef="let element"> <a [routerLink]="['../../edit-student', element.nr_amzes]">{{element.nr_amzes}} </a></td>
     </ng-container>
 
     <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> first name </th>
+      <th mat-header-cell *matHeaderCellDef> First name </th>
       <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> last name </th>
+      <th mat-header-cell *matHeaderCellDef> Last name </th>
       <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> email </th>
+      <th mat-header-cell *matHeaderCellDef> Email </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
     <ng-container matColumnDef="date_of_join">
-      <th mat-header-cell *matHeaderCellDef> date_of_join </th>
+      <th mat-header-cell *matHeaderCellDef> Date Of Join </th>
       <td mat-cell *matCellDef="let element"> {{element.date_of_join}} </td>
     </ng-container>
     <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> gender </th>
+      <th mat-header-cell *matHeaderCellDef> Fender </th>
       <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
     </ng-container>
     <ng-container matColumnDef="date_of_birth">
-      <th mat-header-cell *matHeaderCellDef> date_of_birth </th>
+      <th mat-header-cell *matHeaderCellDef> Date of birth </th>
       <td mat-cell *matCellDef="let element"> {{element.date_of_birth}} </td>
     </ng-container>
     <ng-container matColumnDef="mobile_no">
-      <th mat-header-cell *matHeaderCellDef> mobile_no </th>
+      <th mat-header-cell *matHeaderCellDef> Mobile No. </th>
       <td mat-cell *matCellDef="let element"> {{element.mobile_no}} </td>
     </ng-container>
 
