--- a/src/app/client/components/classes/classes.component.html
+++ b/src/app/client/components/classes/classes.component.html
@@ -24,6 +24,11 @@
       <td mat-cell *matCellDef="let element"> {{element.year}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="created_date">
+      <th mat-header-cell *matHeaderCellDef> Created Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.created_date}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="teacher">
       <th mat-header-cell *matHeaderCellDef> Teacher </th>
       <td mat-cell *matCellDef="let element"><a [routerLink]="['../edit-teacher', element.teacher_id]"> {{element.first_name}} {{element.last_name}}</a></td>
