--- a/src/app/client/components/main/main.component.scss
+++ b/src/app/client/components/main/main.component.scss
@@ -17,12 +17,9 @@ mat-sidenav {
 .content {
   height: calc(100vh - 98px);
   border-radius: 10px;
-  margin: 16px;
-  margin-left: 32px;
-
-  display: flex;
-  justify-content: center;
+  margin: 16px 16px 16px 32px;
   padding: 20px;
+  background: #F6F7FB;
 }
 
 mat-sidenav-container {
