--- a/src/app/client/components/parents/view-children/view-children.component.html
+++ b/src/app/client/components/parents/view-children/view-children.component.html
@@ -1,47 +1,21 @@
-<div>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
+<div class="page-body list-page">
 
-    <ng-container matColumnDef="nr_amzes">
-      <th mat-header-cell *matHeaderCellDef> nr_amzes </th>
-      <td mat-cell *matCellDef="let element"> {{element.nr_amzes}} </td>
-    </ng-container>
+  <div class="row" style="margin-top:20px;">
 
-    <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> first name </th>
-      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
-    </ng-container>
+    <ng-container *ngFor="let student of dataSource">
+      <div class="m-round el-content">
+        <img src="/assets/no-imagef.png" class="img-circle" *ngIf="student?.gender === 'F'">
+        <img src="assets/no-image.png" class="img-circle" *ngIf="student?.gender === 'M'">
+        <br><span>{{student.first_name}} {{student.last_name}}</span><br><b>{{student.email}}</b><br>
+        <form>
+          <button class="btn btn-sm m-round bg-m-gray m-white action-button" type="submit" name="eview" title="View Details" [routerLink]="['../../edit-student',student.nr_amzes]">
+            <mat-icon>edit</mat-icon>
+          </button>
 
-    <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> last name </th>
-      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
+        </form>
+      </div>
     </ng-container>
-
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_join">
-      <th mat-header-cell *matHeaderCellDef> date_of_join </th>
-      <td mat-cell *matCellDef="let element"> {{element.date_of_join}} </td>
-    </ng-container>
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> gender </th>
-      <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_birth">
-      <th mat-header-cell *matHeaderCellDef> date_of_birth </th>
-      <td mat-cell *matCellDef="let element"> {{element.date_of_birth}} </td>
-    </ng-container>
-    <ng-container matColumnDef="mobile_no">
-      <th mat-header-cell *matHeaderCellDef> mobile_no </th>
-      <td mat-cell *matCellDef="let element"> {{element.mobile_no}} </td>
-    </ng-container>
-
-
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  </div>
 
 </div>
