--- a/src/app/client/components/students/students.component.html
+++ b/src/app/client/components/students/students.component.html
@@ -1,63 +1,43 @@
-<div>
-  <button type="button" class="btn btn-outline-primary mb-3" [routerLink]="['../add-student']">Add Student</button>
+<div class="page-body list-page">
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-0">
+  <div class="row" style="margin-top:20px;">
 
-
-    <ng-container matColumnDef="nr_amzes">
-      <th mat-header-cell *matHeaderCellDef> Nr Amzes </th>
-      <td mat-cell *matCellDef="let element"> {{element.nr_amzes}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> First name </th>
-      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> Last name </th>
-      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_join">
-      <th mat-header-cell *matHeaderCellDef> Date of Join </th>
-      <td mat-cell *matCellDef="let element"> {{element.date_of_join}} </td>
-    </ng-container>
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> Gender </th>
-      <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_birth">
-      <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
-      <td mat-cell *matCellDef="let element"> {{element.date_of_birth}} </td>
-    </ng-container>
-    <ng-container matColumnDef="mobile_no">
-      <th mat-header-cell *matHeaderCellDef> Mobile No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.mobile_no}} </td>
-    </ng-container>
-    <ng-container matColumnDef="parent_id">
-      <th mat-header-cell *matHeaderCellDef> Parent </th>
-      <td mat-cell *matCellDef="let element"> <a [routerLink]="['../edit-parent',element.parent_id]">{{element.parent_id}} </a></td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-button class="menu-button" [routerLink]="['../edit-student', element.nr_amzes]">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-button class="menu-button" (click)="deleteStudent(element.nr_amzes,element.user_id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-
-      </td>
+    <ng-container *ngFor="let student of dataSource">
+      <div class="m-round el-content">
+        <img src="/assets/no-imagef.png" class="img-circle" *ngIf="student?.gender === 'F'">
+        <img src="assets/no-image.png" class="img-circle" *ngIf="student?.gender === 'M'">
+        <br><span>{{student.first_name}} {{student.last_name}}</span><br><b>{{student.email}}</b><br>
+        <form>
+          <button class="btn btn-sm m-round bg-m-gray m-white action-button" type="submit" name="eview"
+                  title="View Parent" [routerLink]="['../edit-parent',student.parent_id]" *ngIf="student.parent_id">
+            <mat-icon>details</mat-icon>
+          </button>
+          <button class="btn btn-sm m-round bg-m-blue1 m-white action-button" type="submit" name="eedit" title="Edit"
+                  [routerLink]="['../edit-student', student.nr_amzes]">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button class="btn btn-sm m-round bg-m-orange m-white action-button" type="submit"
+                  (click)="deleteStudent(student.nr_amzes)" name="edelete" title="Delete">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </form>
+      </div>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+
+    <a [routerLink]="['../add-student']" class="new-button">
+      <button class="btn bg-m-blue m-white"
+              style="float:left;text-align:center;margin:15px;width:155px;height:155px;border-radius:50%;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+          <path style="fill:#5755aa; stroke:none;" d="M0 0L0 14L14 14L14 0L0 0z"/>
+          <path style="fill:#ffffff; stroke:none;"
+                d="M14 0L14 14L0 14L0 18L14 18L14 32L18 32L18 18L32 18L32 14L18 14L18 0L14 0z"/>
+          <path style="fill:#5755aa; stroke:none;"
+                d="M18 0L18 14L32 14L32 0L18 0M0 18L0 32L14 32L14 18L0 18M18 18L18 32L32 32L32 18L18 18z"/>
+        </svg>
+        <br>Add New
+      </button>
+    </a>
+  </div>
 
 </div>
