--- a/src/app/client/components/teachers/teachers.component.html
+++ b/src/app/client/components/teachers/teachers.component.html
@@ -1,67 +1,38 @@
-<div>
-  <button type="button" class="btn btn-outline-primary mb-3" [routerLink]="['../add-teacher']">Add Teacher</button>
-
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 m-0">
 
 
-    <ng-container matColumnDef="teacher_id">
-      <th mat-header-cell *matHeaderCellDef> Teacher Id </th>
-      <td mat-cell *matCellDef="let element"> {{element.teacher_id}} </td>
+<div class="page-body list-page">
+
+  <div class="row" style="margin-top:20px;">
+
+    <ng-container *ngFor="let teacher of dataSource">
+      <div class="m-round el-content">
+        <img src="/assets/no-imagef.png" class="img-circle" *ngIf="teacher?.gender === 'F'">
+        <img src="assets/no-image.png" class="img-circle" *ngIf="teacher?.gender === 'M'">
+        <br><span>{{teacher.first_name}} {{teacher.last_name}}</span><br><b>{{teacher.email}}</b><br>
+        <form>
+          <button class="btn btn-sm m-round bg-m-gray m-white action-button" type="submit" name="eview" title="View class" [routerLink]="['../teacher-classes', teacher.teacher_id]">
+            <mat-icon>details</mat-icon>
+          </button>
+          <button class="btn btn-sm m-round bg-m-blue1 m-white action-button" type="submit" name="eedit" title="Edit" [routerLink]="['../edit-teacher', teacher.teacher_id]">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button class="btn btn-sm m-round bg-m-orange m-white action-button" type="submit" (click)="deleteTeacher(teacher.teacher_id, teacher.user_id)" name="edelete" title="Delete">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </form>
+      </div>
     </ng-container>
 
-    <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> First name </th>
-      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
-    </ng-container>
 
-    <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> Last name </th>
-      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Email </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_start">
-      <th mat-header-cell *matHeaderCellDef> Date of Start </th>
-      <td mat-cell *matCellDef="let element"> {{element.date_of_start}} </td>
-    </ng-container>
-    <ng-container matColumnDef="gender">
-      <th mat-header-cell *matHeaderCellDef> Gender </th>
-      <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_birth">
-      <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
-      <td mat-cell *matCellDef="let element"> {{element.date_of_birth}} </td>
-    </ng-container>
-    <ng-container matColumnDef="education">
-      <th mat-header-cell *matHeaderCellDef> Education </th>
-      <td mat-cell *matCellDef="let element"> {{element.education}} </td>
-    </ng-container>
-    <ng-container matColumnDef="experience">
-      <th mat-header-cell *matHeaderCellDef> Experience </th>
-      <td mat-cell *matCellDef="let element"> {{element.experience}} </td>
-    </ng-container>
-    <ng-container matColumnDef="classes">
-      <th mat-header-cell *matHeaderCellDef> Classes </th>
-      <td mat-cell *matCellDef="let element"><a [routerLink]="['../teacher-classes', element.teacher_id]"> View Classes</a></td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-button class="menu-button" [routerLink]="['../edit-teacher', element.teacher_id]">
-          <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-button class="menu-button" (click)="deleteTeacher(element.teacher_id,element.user_id)">
-          <mat-icon>delete</mat-icon>
-        </button>
-
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+    <a [routerLink]="['../add-teacher']" class="new-button">
+      <button class="btn bg-m-blue m-white" style="float:left;text-align:center;margin:15px;width:155px;height:155px;border-radius:50%;">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30">
+          <path style="fill:#5755aa; stroke:none;" d="M0 0L0 14L14 14L14 0L0 0z"/>
+          <path style="fill:#ffffff; stroke:none;" d="M14 0L14 14L0 14L0 18L14 18L14 32L18 32L18 18L32 18L32 14L18 14L18 0L14 0z"/>
+          <path style="fill:#5755aa; stroke:none;" d="M18 0L18 14L32 14L32 0L18 0M0 18L0 32L14 32L14 18L0 18M18 18L18 32L32 32L32 18L18 18z"/>
+        </svg>
+        <br>Add New</button>
+    </a>
+  </div>
 
 </div>
