--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,23 +1,19 @@
 <button mat-button class="menu-button" [routerLink]="['./dashboard']">
-  <mat-icon>home</mat-icon>
   <span>Dashboard</span>
 </button>
 <button mat-button class="menu-button" [routerLink]="['./profile']">
-  <mat-icon>person</mat-icon>
   <span>Profile</span>
 </button>
 <button mat-button class="menu-button" [routerLink]="['./admin-users']">
-  <mat-icon>supervised_user_circle</mat-icon>
   <span>Admin users</span>
 </button>
 <button mat-button class="menu-button" [routerLink]="['./schools']">
-  <mat-icon>school</mat-icon>
   <span>Schools</span>
 </button>
 
 <mat-divider></mat-divider>
 
-<button mat-button class="menu-button" (click)="logOut()">
+<button mat-button class="menu-button logout-button" (click)="logOut()">
   <mat-icon>logout</mat-icon>
   <span>Log out</span>
 </button>
