--- a/src/app/management/components/schools/schools.component.html
+++ b/src/app/management/components/schools/schools.component.html
@@ -35,6 +35,10 @@
       <th mat-header-cell *matHeaderCellDef> ZipCode </th>
       <td mat-cell *matCellDef="let element"> {{element.zipCode}} </td>
     </ng-container>
+    <ng-container matColumnDef="created_date">
+      <th mat-header-cell *matHeaderCellDef> Created Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.created_date}} </td>
+    </ng-container>
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
