--- a/src/app/management/components/system-admin-users/system-admin-users.component.html
+++ b/src/app/management/components/system-admin-users/system-admin-users.component.html
@@ -31,6 +31,10 @@
       <th mat-header-cell *matHeaderCellDef> Role </th>
       <td mat-cell *matCellDef="let element"> {{element.role}} </td>
     </ng-container>
+    <ng-container matColumnDef="created_date">
+      <th mat-header-cell *matHeaderCellDef> Created Date </th>
+      <td mat-cell *matCellDef="let element"> {{element.created_date}} </td>
+    </ng-container>
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef> Status </th>
       <td mat-cell *matCellDef="let element"> {{element.status}} </td>
