--- a/src/app/client/components/classes/class-students/class-students.component.html
+++ b/src/app/client/components/classes/class-students/class-students.component.html
@@ -4,7 +4,10 @@
 
     <ng-container matColumnDef="nr_amzes">
       <th mat-header-cell *matHeaderCellDef> Nr Amzes </th>
-      <td mat-cell *matCellDef="let element"> <a [routerLink]="['../../edit-student', element.nr_amzes]">{{element.nr_amzes}} </a></td>
+      <td mat-cell *matCellDef="let element">
+        <a [routerLink]="['../../view-student', element.nr_amzes]" *ngIf="loggedUser.role === 3">{{element.nr_amzes}} </a>
+        <a [routerLink]="['../../edit-student', element.nr_amzes]" *ngIf="loggedUser.role === 2">{{element.nr_amzes}} </a>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="first_name">
