--- a/src/app/client/components/students/students.component.html
+++ b/src/app/client/components/students/students.component.html
@@ -22,7 +22,7 @@
           </button>
 
           <button class="btn btn-sm m-round bg-m-blue1 m-white action-button" type="submit"
-                  (click)="generateReport(student.nr_amzes, student.first_name + '_' + student.last_name)" name="edelete" title="Delete">
+                  (click)="generateReport(student.nr_amzes, student.first_name + '_' + student.last_name)" name="edelete" title="Generate Report">
             <mat-icon>download</mat-icon>
           </button>
         </form>
